# cavestory-cpp

./: .gitignore  Cavestory.sln
Cavestory/: AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  Cavestory.vcxproj  Cavestory.vcxproj.filters  Game.cpp  Game.h  Globals.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Level.cpp  Level.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  Tile.cpp  Tile.h  main.cpp  resource.h
Cavestory/content/maps/: Map1.tmx  Map1.xml
Cavestory/content/tilesets/: PrtTest.tsx
